--- a/DynamicProxy.Net45/DynamicProxy.Net45.nuspec
+++ b/DynamicProxy.Net45/DynamicProxy.Net45.nuspec
@@ -2,14 +2,16 @@
 <package >
   <metadata>
     <id>dynamic-proxy</id>
-    <version>1.0.6</version>
-    <title>dynamic-proxy</title>
+    <version>1.0.8</version>
+    <title>DynamicProxy</title>
     <authors>arleyschrock</authors>
     <owners>arleyschrock</owners>
+    <licenseUrl>http://www.opensource.org/licenses/mit-license.php</licenseUrl>
+    <projectUrl>https://github.com/arleyschrock/dynamic-proxy</projectUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <description>Fody-based proxy generator with support for async patterns - based on sexy-proxy but with a slightly different name</description>
     <releaseNotes>Initial release</releaseNotes>
     <copyright>Copyright 2016</copyright>
-    <tags>dynamic proxy dynamicproxy async proxy asyncproxy</tags>
+    <tags>dynamic-proxy dynamicproxy async proxy asyncproxy</tags>
   </metadata>
 </package>
