--- a/DynamicProxy.Net45/DynamicProxy.Net45.nuspec
+++ b/DynamicProxy.Net45/DynamicProxy.Net45.nuspec
@@ -3,7 +3,7 @@
   <metadata>
     <id>dynamic-proxy</id>
     <version>1.0.8</version>
-    <title>DynamicProxy</title>
+    <title>dynamic-proxy</title>
     <authors>arleyschrock</authors>
     <owners>arleyschrock</owners>
     <licenseUrl>http://www.opensource.org/licenses/mit-license.php</licenseUrl>
