--- a/DynamicProxy.Fody/DynamicProxy.Fody.csproj
+++ b/DynamicProxy.Fody/DynamicProxy.Fody.csproj
@@ -58,23 +58,15 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ClassWeaver.cs" />
-    <Compile Include="CecilExtensions.cs" />
-    <Compile Include="InPlaceClassWeaver.cs" />
-    <Compile Include="MethodWeaver.cs" />
-    <Compile Include="ReverseProxyClassWeaver.cs" />
-    <Compile Include="InterfaceClassWeaver.cs" />
-    <Compile Include="ModuleWeaver.cs" />
-    <Compile Include="NonInterfaceClassWeaver.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="DynamicProxyWeaver.cs" />
-    <Compile Include="TargetedClassWeaver.cs" />
-    <Compile Include="UnimplementedMethodWeaver.cs" />
-    <Compile Include="WeaverContext.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
+  <Import Project="..\DynamicProxy.CecilEmit\DynamicProxy.CecilEmit.projitems" Label="Shared" />
+  <Import Project="..\DynamicProxy.Shared\DynamicProxy.Shared.projitems" Label="Shared" />
+  <Import Project="..\DynamicProxy.Emit\DynamicProxy.Emit.projitems" Label="Shared" />
+  <Import Project="..\DynamicProxy\DynamicProxy.projitems" Label="Shared" />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
